feat: formatting template
